# 25022025group

./: .gitignore  Dockerfile  Makefile  README.md  conftest.py  main.py  models.py  pyproject.toml  test_utils.py  utils.py
.github/workflows/: test-study.yaml  testing-with-poetry.yaml
playground/: index.html  otp.py  work_with_otp.py  working_base64.py  working_with_hash.py  working_with_passlib.py
tests/: test_bank.py  test_person.py  test_utils.py
